# cpp-template

./: .gitignore  LICENSE  README.md  run
cmake/: CMakeLists.txt  FindSML.cmake
scripts/: compile_fonts.sh  help.sh  install.sh  start.sh
src/: main.cpp
